--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,3 +71,13 @@
   optionTextField="optionTitle"
   placeholder="Select...">
 </ngx-select>
+
+<div class="templates" *ngIf="showTemp">
+  <ul>
+    <li *ngFor="let temp of templates ; index as i" (click)="onSelectTemplate(temp)">{{i}} {{temp}}</li>
+  </ul>
+</div>
+
+<div class="send-button" *ngIf="sendActivated">
+  <button (click)="sendEmail()">SEND</button>
+</div>
