--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,9 +74,9 @@
 
 <div class="templates" *ngIf="showTemp">
   <ul>
-    <li *ngFor="let temp of templates ; index as i" (click)="onSelectTemplate(temp)">
-      <span>{{i}}</span>
-      {{temp}}
+    <li *ngFor="let temp of templates" (click)="onSelectTemplate(temp.id)">
+      <span>{{temp.id}}</span>
+      {{temp.text}}
     </li>
   </ul>
 </div>
