--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.ngx-select__selected-single{
+  padding-right: 1em !important;
+}
+
+.ngx-select__choices{
+  width: auto !important;
+}
