--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'IBM Plex Sans', sans-serif; }
+h2 { font-family: 'IBM Plex Sans', sans-serif; }
 
 .ngx-select__selected-single{
   padding-right: 1em !important;
