--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,92 +1,59 @@
-<!--<header>-->
-<!--  <nav class="navbar navbar-default">-->
-<!--    <a class="navbar-brand" href="#">Places List</a>-->
-<!--  </nav>-->
-<!--</header>-->
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 
-<!--<div class="container">-->
-<!--  <div class="row">-->
-<!--    <nav class="navbar">-->
-<!--      <mat-form-field>-->
-<!--        <mat-label>Places</mat-label>-->
-<!--        <label>-->
-<!--          <input matInput [(ngModel)]="searchText" class="form-control" type="text" placeholder="Enter Place">-->
-<!--        </label>-->
-<!--        <mat-select>-->
-<!--          <mat-option *ngFor="let c of placeNames">-->
-<!--            {{c}}-->
-<!--          </mat-option>-->
-<!--        </mat-select>-->
-<!--      </mat-form-field>-->
-<!--    </nav>-->
-<!--    <table class="table">-->
-<!--      <thead>-->
-<!--        <tr>-->
-<!--          <th>#</th>-->
-<!--          <th>Name</th>-->
-<!--          <th>Attraction</th>-->
-<!--        </tr>-->
-<!--      </thead>-->
-<!--      <tbody>-->
-<!--        <tr *ngFor="let place of places; let i = index">-->
-<!--          <td>{{i}}</td>-->
-<!--          <td>{{place.name}}</td>-->
-<!--          <td>{{place.attraction}}</td>-->
-<!--        </tr>-->
-<!--      </tbody>-->
-<!--    </table>-->
-<!--  </div>-->
-<!--</div>-->
-
-<div class="place">
-  <ngx-select
-    [allowClear]="true"
-    [items]="names"
-    (select) = "selectedPlace($event)"
-    optionValueField="optionId"
-    optionTextField="optionTitle"
-    placeholder="Select...">
-  </ngx-select>
-</div>
+<div class="head">
+  <div class="place">
+    <h3>Select Place</h3>
+    <ngx-select
+      [allowClear]="true"
+      [items]="names"
+      (select) = "selectedPlace($event)"
+      optionValueField="optionId"
+      optionTextField="optionTitle"
+      placeholder="Select...">
+    </ngx-select>
+  </div>
 
 
-<div class="attraction">
-  <ngx-select
-    *ngIf="!showAttractionList"
-    [allowClear]="true"
-    [items]="attractions"
-    (select) = "selectedAttraction($event)"
-    optionValueField="optionId"
-    optionTextField="optionTitle"
-    placeholder="Select...">
-  </ngx-select>
-</div>
+  <div class="attraction" *ngIf="showAttractionList">
+    <h3>Select Attraction</h3>
+    <ngx-select
+      [allowClear]="true"
+      [items]="attractions"
+      (select) = "selectedAttraction($event)"
+      optionValueField="optionId"
+      optionTextField="optionTitle"
+      placeholder="Select...">
+    </ngx-select>
+  </div>
 
 
 
-<div class="email">
-  <ngx-select
-    *ngIf="!showEmailList"
-    [multiple]="true"
-    [allowClear]="true"
-    [items]="emailList"
-    (select) = "selectedEmails($event)"
-    optionValueField="optionId"
-    optionTextField="optionTitle"
-    placeholder="Select...">
-  </ngx-select>
-</div>
+  <div class="email" *ngIf="showEmailList">
+    <h3>Select Email IDs</h3>
+    <ngx-select
+      [multiple]="true"
+      [allowClear]="true"
+      [items]="emailList"
+      (select) = "selectedEmails($event)"
+      optionValueField="optionId"
+      optionTextField="optionTitle"
+      placeholder="Select...">
+    </ngx-select>
+  </div>
 
 
-<!--<div class="templates" *ngIf="!showTemp">-->
-  <ul class="template">
-    <li *ngFor="let temp of templates" (click)="onSelectTemplate(temp.id)">
-      <span class="badge">{{temp.id}}</span>
-      <span class="text">{{temp.text}}</span>
-    </li>
-  </ul>
-<!--</div>-->
+  <div class="templates" *ngIf="showTemp">
+    <h3>Select Template</h3>
+    <ul class="template">
+      <li *ngFor="let temp of templates" [class.selected]="temp.id === selectTemplate" (click)="onSelectTemplate(temp.id)">
+        <span class="badge">{{temp.id}}</span>
+        <span class="text">{{temp.text}}</span>
+      </li>
+    </ul>
+  </div>
 
-<div class="send-button" *ngIf="sendActivated">
-  <button (click)="sendEmail()">SEND</button>
+  <div class="send-button" *ngIf="sendActivated">
+    <button (click)="sendEmail()">SEND</button>
+  </div>
+
 </div>
